fixed overflow for body when popup is open

--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@
 .button {
     background-color: #fff;
     border: 1px solid var(--orange);
-    padding: 10px 0;
+    padding: 10px;
     cursor: pointer;
     transition: 0.2s ease background-color;
     border-radius: 2px;
@@ -188,25 +188,25 @@
     /*border-color: #0dd6f8;*/
 }
 
-/*.main__tabs{*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-/*.main__tab{*/
-/*    height: 40px;*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*    padding: 10px 15px;*/
-/*    margin-right: 8px;*/
-/*    border: 2px solid #2a2f36;*/
-/*    background-color: #333333;*/
-/*    cursor: pointer;*/
-/*}*/
-/*.main__tab-active{*/
-/*    background-color: #12c0dd;*/
-/*    border: 1px solid #12c0dd;*/
-/*}*/
+.main__tabs{
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+}
+.main__tab{
+    height: 40px;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    margin-right: 8px;
+    cursor: pointer;
+}
+.main__tab-active{
+    background-color: #12c0dd;
+    border: 1px solid #12c0dd;
+}
 .main__header {
     display: flex;
     align-items: center;
